{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 205,
  "lineage": "caa5ba42-c2ab-6b6d-4831-64938b499cf3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.136.248.84",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-03-28T22:40:39.704-07:00",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8086"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-28T22:40:51.747-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-access-to-influx-db",
            "log_config": [],
            "name": "allow-access-to-influx-db",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-access-to-influx-db",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "influx-db"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_grafana_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-28T22:40:51.789-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-access-to-grafana-ui",
            "log_config": [],
            "name": "allow-access-to-grafana-ui",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-access-to-grafana-ui",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "grafana-web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-28T22:40:51.747-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-access-to-jenkins-web",
            "log_config": [],
            "name": "allow-access-to-jenkins-web",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-access-to-jenkins-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "jenkins-web"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_influx",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-28T22:40:51.753-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-influx",
            "log_config": [],
            "name": "allow-ssh-to-influx",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-influx",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "bastion",
              "jenkins-ssh",
              "jenkins-worker"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-28T22:40:51.772-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-jenkins",
            "log_config": [],
            "name": "allow-ssh-to-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-jenkins",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "bastion",
              "jenkins-ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-28T22:40:51.822-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-worker",
            "log_config": [],
            "name": "allow-ssh-to-worker",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-ssh-to-worker",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "bastion",
              "jenkins-ssh",
              "jenkins-worker"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssl_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-03-28T22:40:51.775-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/eventer-jenkins-cluster/global/firewalls/allow-ssl-to-bastion",
            "log_config": [],
            "name": "allow-ssl-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "priority": 1000,
            "project": "eventer-jenkins-cluster",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/firewalls/allow-ssl-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "grafana_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-03-28T22:41:55.700-07:00",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/grafana-forwarding-rule",
            "ip_address": "35.225.32.23",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "grafana-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "3000",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/grafana-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/targetPools/jenkins-master-target-pool"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_http_health_check.jenkins_master_health_check",
            "google_compute_instance.bastion",
            "google_compute_instance.jenkins_master",
            "google_compute_network.management",
            "google_compute_subnetwork.private_subnets",
            "google_compute_subnetwork.public_subnets",
            "google_compute_target_pool.jenkins-master-target-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "jenkins_master_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-03-28T22:41:55.821-07:00",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/jenkins-master-forwarding-rule",
            "ip_address": "34.66.4.108",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "jenkins-master-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "8080",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/forwardingRules/jenkins-master-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/targetPools/jenkins-master-target-pool"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_http_health_check.jenkins_master_health_check",
            "google_compute_instance.bastion",
            "google_compute_instance.jenkins_master",
            "google_compute_network.management",
            "google_compute_subnetwork.private_subnets",
            "google_compute_subnetwork.public_subnets",
            "google_compute_target_pool.jenkins-master-target-pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-8-v20200316",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eventer-jenkins-cluster/zones/us-central1-a/instances/bastion",
            "instance_id": "1849587322269410580",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "packer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/8yNFkOsnKgifvFP51yMWyDxyLUwvXVI/uKwDgm5u74HjLZw226p+ao5RSQ4aNWtnZ1Ufe8hXaO6PE5RLVAuHqHQWb5xCSDd9Yd7i+dIf5vtkTiP+ZRK8YXZHan3PtdP6bTyb/IK5W62w4cdAysEZf4z42WzsNnK8yUBo0T1r/f0ZFK2CJ9JKqZDflgUBHdpVZv3EoD8uQZCJ0PrE9QY8IpBJl5E0e9rzmvFgOamoEeef9/AnXy0//CJSyydxUM/2YvuNMz/jx15oOoOK9iHr8FtwE2nq84z+cT6k9zgvIpbo7kmvXvindWN8W6Q4voKwAr1efiNYONvHnepMWJQIahHN3UGL3iKSRPeLJb/fllJEoDUT7b3RpIMhGWdgfV0Cuh8mHiCN5EnvDCBaWkjlzLPrZnrzS1sy1HxrHtdVa4 [...]
            },
            "metadata_fingerprint": "HCTT5Vh82Ek=",
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.248.84",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-0-1-0",
                "subnetwork_project": "eventer-jenkins-cluster"
              }
            ],
            "project": "eventer-jenkins-cluster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/instances/bastion",
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_network.management",
            "google_compute_subnetwork.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/images/jenkins-master-v22041",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/disks/jenkins-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/eventer-jenkins-cluster/zones/us-central1-a/instances/jenkins-master",
            "instance_id": "3242560798227112677",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "packer:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQC/8yNFkOsnKgifvFP51yMWyDxyLUwvXVI/uKwDgm5u74HjLZw226p+ao5RSQ4aNWtnZ1Ufe8hXaO6PE5RLVAuHqHQWb5xCSDd9Yd7i+dIf5vtkTiP+ZRK8YXZHan3PtdP6bTyb/IK5W62w4cdAysEZf4z42WzsNnK8yUBo0T1r/f0ZFK2CJ9JKqZDflgUBHdpVZv3EoD8uQZCJ0PrE9QY8IpBJl5E0e9rzmvFgOamoEeef9/AnXy0//CJSyydxUM/2YvuNMz/jx15oOoOK9iHr8FtwE2nq84z+cT6k9zgvIpbo7kmvXvindWN8W6Q4voKwAr1efiNYONvHnepMWJQIahHN3UGL3iKSRPeLJb/fllJEoDUT7b3RpIMhGWdgfV0Cuh8mHiCN5EnvDCBaWkjlzLPrZnrzS1sy1HxrHtdVa4 [...]
            },
            "metadata_fingerprint": "HCTT5Vh82Ek=",
            "name": "jenkins-master",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-0-0-0",
                "subnetwork_project": "eventer-jenkins-cluster"
              }
            ],
            "project": "eventer-jenkins-cluster",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/zones/us-central1-a/instances/jenkins-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "grafana-web",
              "jenkins-ssh",
              "jenkins-web"
            ],
            "tags_fingerprint": "wr4r4LVwHaY=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_instance.bastion",
            "google_compute_network.management",
            "google_compute_subnetwork.private_subnets",
            "google_compute_subnetwork.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/eventer-jenkins-cluster/global/networks/management",
            "mtu": 0,
            "name": "management",
            "project": "eventer-jenkins-cluster",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "private_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-28T22:41:04.120-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/routers/private-router-management",
            "name": "private-router-management",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/routers/private-router-management"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "eventer-jenkins-cluster/us-central1/private-router-management/nat-management",
            "min_ports_per_vm": 0,
            "name": "nat-management",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "eventer-jenkins-cluster",
            "region": "us-central1",
            "router": "private-router-management",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-0-0-0",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-0-2-0",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.management",
            "google_compute_router.private_router",
            "google_compute_subnetwork.private_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-28T22:40:52.032-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-0-0-0",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-10-0-0-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-0-0-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-28T22:40:52.008-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-0-2-0",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private-10-0-2-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/private-10-0-2-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-28T22:40:51.917-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-0-1-0",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-10-0-1-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-0-1-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-03-28T22:41:04.232-07:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-0-3-0",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "public-10-0-3-0",
            "network": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/global/networks/management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "eventer-jenkins-cluster",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/eventer-jenkins-cluster/regions/us-central1/subnetworks/public-10-0-3-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    }
  ]
}